# aruco-navi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  detec_aruco.py  detect_aruco.py  generate_aruco_marker.py  get_sys_info.py  main.cpp  test_pyaruconavi.py
src/: calculate_angles.cpp  calculate_angles.h  constant.h  detect.cpp  detect.h  drawfunc.cpp  drawfunc.h  kinematics.cpp  kinematics.h  magic.h  mathtypes.h  mathutil.cpp  mathutil.h  multiframes.cpp  multiframes.h  realsenssutil.h  rscapture.cpp  rscapture.h  rscvcapture.cpp  rscvcapture.h  stb_easy_font.h
src/external_api/: CMakeLists.txt  export_apis.cpp  export_apis.h  setup.py
src/external_api/pyaruconavi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
